// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup component should render correctly with all the default props 1`] = `
.c8 {
  font-size: 16px;
}

.c8 * {
  fill: #555;
}

.c0 {
  margin: 8px 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  margin: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c2 {
  margin: 0px 0px 0px 8px;
  color: #012040;
  cursor: pointer;
}

.c3 {
  width: 16px;
  height: 16px;
  position: relative;
  border: 1px solid #CCCCCC;
  background-color: #ffffff;
  border-radius: 15%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  width: 0;
  height: 0;
  z-index: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c7 {
  width: 100%;
  height: 100%;
}

.c4 {
  opacity: 0;
  z-index: 2;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  cursor: pointer;
}

.c4:focus {
  outline: none;
}

.c4:checked ~ .c5 {
  width: calc(70%);
  height: calc(70%);
  -webkit-transition: width 0.2s ease,height 0.2s ease;
  transition: width 0.2s ease,height 0.2s ease;
}

<div>
  <div
    class="c0"
  >
    
    <div
      class="c1"
    >
      <label
        class="c2"
        for="Apple"
      >
        Apple
      </label>
      <div
        class="c3"
      >
        <input
          class="c4"
          id="Apple"
          name=""
          type="checkbox"
        />
        <div
          class="c5 c6"
        >
          <svg
            class="c7 c8"
            height="1em"
            viewBox="0 0 18 14"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 11.17L1.83 7 .41 8.41 6 14 18 2 16.59.59z"
              fill="none"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="c1"
    >
      <label
        class="c2"
        for="Orange"
      >
        Orange
      </label>
      <div
        class="c3"
      >
        <input
          class="c4"
          id="Orange"
          name=""
          type="checkbox"
        />
        <div
          class="c5 c6"
        >
          <svg
            class="c7 c8"
            height="1em"
            viewBox="0 0 18 14"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 11.17L1.83 7 .41 8.41 6 14 18 2 16.59.59z"
              fill="none"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckboxGroup component should render correctly with all the props given 1`] = `
.c9 {
  font-size: 16px;
}

.c9 * {
  fill: #555;
}

.c2 {
  margin: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 {
  margin: 8px 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin: 0px 0px 0px 8px;
  color: #012040;
  cursor: pointer;
}

.c1 {
  margin: 0px 0px 8px 0px;
  color: #012040;
}

.c1::after {
  color: red;
  content: ' *';
}

.c4 {
  width: 16px;
  height: 16px;
  position: relative;
  border: 1px solid #CCCCCC;
  background-color: #ffffff;
  border-radius: 15%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  width: 0;
  height: 0;
  z-index: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 .c8 {
  width: 100%;
  height: 100%;
}

.c5 {
  opacity: 0;
  z-index: 2;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  cursor: pointer;
}

.c5:focus {
  outline: none;
}

.c5:checked ~ .c6 {
  width: calc(70%);
  height: calc(70%);
  -webkit-transition: width 0.2s ease,height 0.2s ease;
  transition: width 0.2s ease,height 0.2s ease;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1"
      required=""
    >
      Fruits
    </label>
    <div
      class="c2"
    >
      <label
        class="c3"
        for="Apple"
      >
        Apple
      </label>
      <div
        class="c4"
      >
        <input
          class="c5"
          id="Apple"
          name="fruits"
          required=""
          type="checkbox"
        />
        <div
          class="c6 c7"
        >
          <svg
            class="c8 c9"
            height="1em"
            viewBox="0 0 18 14"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 11.17L1.83 7 .41 8.41 6 14 18 2 16.59.59z"
              fill="none"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="c2"
    >
      <label
        class="c3"
        for="Orange"
      >
        Orange
      </label>
      <div
        class="c4"
      >
        <input
          class="c5"
          id="Orange"
          name="fruits"
          required=""
          type="checkbox"
        />
        <div
          class="c6 c7"
        >
          <svg
            class="c8 c9"
            height="1em"
            viewBox="0 0 18 14"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 11.17L1.83 7 .41 8.41 6 14 18 2 16.59.59z"
              fill="none"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
